[gd_scene format=3 uid="uid://60bwveuu2rt"]

[ext_resource type="Script" uid="uid://cf56ce8uvkmha" path="res://example1/example1.gd" id="1_2r7vq"]
[ext_resource type="PackedScene" uid="uid://c7u8hryloq7hy" path="res://addons/card-framework/card_manager.tscn" id="1_rurpr"]
[ext_resource type="PackedScene" uid="uid://dk6rb7lhv1ef6" path="res://addons/card-framework/pile.tscn" id="2_xkfcc"]
[ext_resource type="PackedScene" uid="uid://diap3gdfbqvjv" path="res://example1/my_card_factory.tscn" id="3_l4bd6"]
[ext_resource type="PackedScene" uid="uid://bkpjlq7ggckg6" path="res://addons/card-framework/hand.tscn" id="3_xp5g3"]
[ext_resource type="PackedScene" path="res://example1/battle_column.tscn" id="4_col"]
[ext_resource type="PackedScene" path="res://example1/spell_play_zone.tscn" id="5_spell"]

[node name="Example1" type="Node" unique_id=465306552]
script = ExtResource("1_2r7vq")

[node name="CardManager" parent="." unique_id=1234809607 instance=ExtResource("1_rurpr")]
card_size = Vector2(160, 220)
card_factory_scene = ExtResource("3_l4bd6")

[node name="SpellPlayZone" parent="CardManager" unique_id=1316289548 instance=ExtResource("5_spell")]
layout_mode = 0
offset_left = 100.0
offset_top = 40.0
offset_right = 1700.0
offset_bottom = 740.0

[node name="BattleField" type="HBoxContainer" parent="CardManager" unique_id=1269234991]
layout_mode = 0
offset_left = 25.0
offset_top = 40.0
offset_right = 1895.0
offset_bottom = 740.0
theme_override_constants/h_separation = 10
alignment = 1

[node name="Column1" parent="CardManager/BattleField" unique_id=1105774856 instance=ExtResource("4_col")]
layout_mode = 2

[node name="Column2" parent="CardManager/BattleField" unique_id=86258571 instance=ExtResource("4_col")]
layout_mode = 2

[node name="Column3" parent="CardManager/BattleField" unique_id=17745642 instance=ExtResource("4_col")]
layout_mode = 2

[node name="Column4" parent="CardManager/BattleField" unique_id=348197585 instance=ExtResource("4_col")]
layout_mode = 2

[node name="Column5" parent="CardManager/BattleField" unique_id=1642834448 instance=ExtResource("4_col")]
layout_mode = 2

[node name="Column6" parent="CardManager/BattleField" unique_id=381788353 instance=ExtResource("4_col")]
layout_mode = 2
is_player_column = false

[node name="Column7" parent="CardManager/BattleField" unique_id=2097013281 instance=ExtResource("4_col")]
layout_mode = 2
is_player_column = false

[node name="Column8" parent="CardManager/BattleField" unique_id=1463450099 instance=ExtResource("4_col")]
layout_mode = 2
is_player_column = false

[node name="Hand" parent="CardManager" unique_id=894436731 instance=ExtResource("3_xp5g3")]
layout_mode = 0
offset_left = 1100.0
offset_top = 880.0
offset_right = 1100.0
offset_bottom = 880.0

[node name="Deck" parent="CardManager" unique_id=196193800 instance=ExtResource("2_xkfcc")]
layout_mode = 0
offset_left = 300.0
offset_top = 880.0
offset_right = 300.0
offset_bottom = 880.0
card_face_up = false

[node name="Graveyard" parent="CardManager" unique_id=1488260806 instance=ExtResource("2_xkfcc")]
layout_mode = 0
offset_left = 100.0
offset_top = 880.0
offset_right = 100.0
offset_bottom = 880.0

[node name="HandLabel" type="Label" parent="." unique_id=1794985305]
offset_left = 1150.0
offset_top = 800.0
offset_right = 1192.0
offset_bottom = 823.0
text = "Hand"

[node name="DeckLabel" type="Label" parent="." unique_id=1508836556]
offset_left = 355.0
offset_top = 800.0
offset_right = 395.0
offset_bottom = 823.0
text = "Deck"

[node name="GraveyardLabel" type="Label" parent="." unique_id=615314057]
offset_left = 100.0
offset_top = 800.0
offset_right = 159.0
offset_bottom = 823.0
text = "Graveyard"

[node name="EnergyLabel" type="Label" parent="." unique_id=2127611817]
offset_left = 1650.0
offset_top = 750.0
offset_right = 1900.0
offset_bottom = 776.0
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Energy: 3 / 3"

[node name="RoundLabel" type="Label" parent="." unique_id=1841404796]
offset_left = 1650.0
offset_top = 700.0
offset_right = 1900.0
offset_bottom = 726.0
theme_override_font_sizes/font_size = 20
text = "Round: 1"

[node name="EndRoundButton" type="Button" parent="." unique_id=1608834043]
offset_left = 1650.0
offset_top = 800.0
offset_right = 1900.0
offset_bottom = 850.0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 18
text = "END ROUND"

[node name="NotificationLabel" type="Label" parent="." unique_id=659079838]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 42
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerFieldLabel" type="Label" parent="." unique_id=400000001]
offset_left = 25.0
offset_top = 10.0
offset_right = 955.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = "PLAYER COLUMNS (1-5)"
horizontal_alignment = 1

[node name="EnemyFieldLabel" type="Label" parent="." unique_id=341662252]
offset_left = 965.0
offset_top = 10.0
offset_right = 1895.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.8, 0.4, 0.4, 1)
text = "ENEMY COLUMNS (6-8)"
horizontal_alignment = 1

[connection signal="pressed" from="EndRoundButton" to="." method="_on_end_round_button_pressed"]
